[package]
name = "async_serde"
description = "Use Serde as a general-purpose data format API."
version = "0.1.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/SoniEx2/async_serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
serde = "1.0.140"
async-trait = "0.1.57"

[dev-dependencies]
serde_json = "1"
